--- a/html/rentals.html
+++ b/html/rentals.html
@@ -1,92 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Rentals - Ruler Tours</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/footer.css">
+  <meta charset="UTF-8">
+  <title>Rentals - Ruler Tours</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="../css/global.css">
+  <link rel="stylesheet" href="../css/footer.css">
+  <script src="../javascript/auth-guard.js"></script>
 </head>
+
 <body>
-    <header style="display: flex; justify-content: space-between; align-items: center; padding: 10px 5%;">
-    <a href="../index.html" class="logo-wrap" style="display: flex; align-items: center; text-decoration: none; gap: 12px;">
-        <img src="../assets/dark_logo.png" alt="Ruler Tours Logo" id="main-logo" style="height: 45px; width: auto;">
-        <span class="brand-name" style="font-size: 1.6rem; font-weight: bold; color: #000; font-family: sans-serif;">Ruler Tours</span>
+  <header style="display: flex; justify-content: space-between; align-items: center; padding: 10px 5%;">
+    <a href="../index.html" class="logo-wrap"
+      style="display: flex; align-items: center; text-decoration: none; gap: 12px;">
+      <img src="../assets/dark_logo.png" alt="Ruler Tours Logo" id="main-logo" style="height: 45px; width: auto;">
+      <span class="brand-name" style="font-size: 1.6rem; font-weight: bold; color: #000; font-family: sans-serif;">Ruler
+        Tours</span>
     </a>
 
     <nav>
-        <ul style="display: flex; list-style: none; gap: 25px; margin: 0; padding: 0;">
-            <li><a href="../index.html" style="text-decoration: none; color: #333; font-weight: 500;">Home</a></li>
-            <li><a href="destinations.html" style="text-decoration: none; color: #333; font-weight: 500;">Tours</a></li>
-            <li><a href="rentals.html" style="text-decoration: none; color: #333; font-weight: 500;">Rentals</a></li>
-            <li><a href="about.html" style="text-decoration: none; color: #333; font-weight: 500;">About</a></li>
-            <li><a href="contact.html" style="text-decoration: none; color: #333; font-weight: 500;">Contact</a></li>
-        </ul>
+      <ul style="display: flex; list-style: none; gap: 25px; margin: 0; padding: 0;">
+        <li><a href="../index.html" style="text-decoration: none; color: #333; font-weight: 500;">Home</a></li>
+        <li><a href="destinations.html" style="text-decoration: none; color: #333; font-weight: 500;">Tours</a></li>
+        <li><a href="rentals.html" style="text-decoration: none; color: #333; font-weight: 500;">Rentals</a></li>
+        <li><a href="about.html" style="text-decoration: none; color: #333; font-weight: 500;">About</a></li>
+        <li><a href="contact.html" style="text-decoration: none; color: #333; font-weight: 500;">Contact</a></li>
+      </ul>
     </nav>
-</header>
+  </header>
 
-    <section>
-        <h2>Rent a Vehicle</h2>
-        <div class="grid">
-            <div class="card">
-                <h3>🚗 SUV - Toyota Land Cruiser</h3>
-                <p>$120 / Day</p>
-                <button>Rent Now</button>
-            </div>
-            <div class="card">
-                <h3>🏍️ Adventure Bike - BMW GS</h3>
-                <p>$60 / Day</p>
-                <button>Rent Now</button>
-            </div>
-        </div>
-    </section>
-    <footer class="footer">
-  <div class="footer-container">
-
-    <div class="footer-brand">
-      <h2>Ruler Tours</h2>
-      <p>Premium tours and vehicle rentals crafted for modern explorers. Travel with confidence and class.</p>
-      <div class="footer-social">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+  <section>
+    <h2>Rent a Vehicle</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>🚗 SUV - Toyota Land Cruiser</h3>
+        <p>$120 / Day</p>
+        <button>Rent Now</button>
+      </div>
+      <div class="card">
+        <h3>🏍️ Adventure Bike - BMW GS</h3>
+        <p>$60 / Day</p>
+        <button>Rent Now</button>
       </div>
     </div>
+  </section>
+  <footer class="footer">
+    <div class="footer-container">
 
-    <div class="footer-links">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="html/destinations.html">Tours</a></li>
-        <li><a href="html/rentals.html">Rentals</a></li>
-        <li><a href="html/about.html">About</a></li>
-        <li><a href="html/contact.html">Contact</a></li>
-      </ul>
+      <div class="footer-brand">
+        <h2>Ruler Tours</h2>
+        <p>Premium tours and vehicle rentals crafted for modern explorers. Travel with confidence and class.</p>
+        <div class="footer-social">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+
+      <div class="footer-links">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="html/destinations.html">Tours</a></li>
+          <li><a href="html/rentals.html">Rentals</a></li>
+          <li><a href="html/about.html">About</a></li>
+          <li><a href="html/contact.html">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-links">
+        <h3>Services</h3>
+        <ul>
+          <li><a href="html/destinations.html">Luxury Tours</a></li>
+          <li><a href="html/rentals.html">Car Rentals</a></li>
+          <li><a href="html/contact.html">Corporate Trips</a></li>
+          <li><a href="html/package.html">Custom Packages</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-contact">
+        <h3>Contact Us</h3>
+        <p><i class="fas fa-envelope"></i> travelagency@gmail.com</p>
+        <p><i class="fas fa-phone"></i> +91 Your Number</p>
+        <p><i class="fas fa-map-marker-alt"></i> City, India</p>
+      </div>
+
     </div>
 
-    <div class="footer-links">
-      <h3>Services</h3>
-      <ul>
-        <li><a href="html/destinations.html">Luxury Tours</a></li>
-        <li><a href="html/rentals.html">Car Rentals</a></li>
-        <li><a href="html/contact.html">Corporate Trips</a></li>
-        <li><a href="html/package.html">Custom Packages</a></li>
-      </ul>
+    <div class="footer-bottom">
+      <p>© 2026 Ruler Tours. All rights reserved.</p>
     </div>
-
-    <div class="footer-contact">
-      <h3>Contact Us</h3>
-      <p><i class="fas fa-envelope"></i> travelagency@gmail.com</p>
-      <p><i class="fas fa-phone"></i> +91 Your Number</p>
-      <p><i class="fas fa-map-marker-alt"></i> City, India</p>
-    </div>
-
-  </div>
-
-  <div class="footer-bottom">
-    <p>© 2026 Ruler Tours. All rights reserved.</p>
-  </div>
-  <script src="footer.js"></script>
-</footer>
+    <script src="footer.js"></script>
+  </footer>
 </body>
+
 </html>
